2000-01-30  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* poe-18.el (window-minibuffer-p): New function.

2000-01-30  Tsukamoto Tetsuo  <czkmt@remus.dti.ne.jp>

	* pces-om.el (insert-file-contents-as-coding-system): Ignore BEG,
	END and REPLACE under Emacs 18, or Mule 1.1 or earlier.
	(insert-file-contents-as-binary): Ditto.

2000-01-27  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* APEL-CFG: Typo.

2000-01-26  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe-18.el (set-match-data): New alias for `store-match-data'.
	(save-match-data-internal): New variable.
	(save-match-data): New macro; use above.

	(defalias): Docstring sync.
	(put-text-property): Typo.

2000-01-23  Tsukamoto Tetsuo  <czkmt@remus.dti.ne.jp>

	* poe-18.el (byte-code-function-p): Check if the CDR of OBJECT is
	a cons cell.


2000-01-21  Yuuichi Teranishi  <teranisi@gohome.org>

	* APEL: Version 10.1 released.

2000-01-19  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe.el (require): Handle `file-error' only.

2000-01-12  OKAZAKI Tetsurou  <okazaki@be.to>

	* EMU-ELS (emu-modules): Add `pccl' even if `mule' is not provided.

2000-01-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* Makefile, README.en, README.ja: Update for the new CVS server.

1999-12-24  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe.el (functionp): Define it before loading "localhook".


1999-12-24  Yuuichi Teranishi  <teranisi@gohome.org>

	* APEL: Version 10.0 released.

1999-12-24  Keiichi Suzuki  <keiichi@nanap.org>

	* apel-ver.el: Fix file header.

1999-12-23  Yuuichi Teranishi  <teranisi@gohome.org>

	* timezone.el (timezone-abs): Eliminated.
	(timezone-zone-to-minute): Use `abs' instead of `timezone-abs'.

	* poe-18.el (current-time-zone): Use `abs'.

1999-12-23  Keiichi Suzuki  <keiichi@nanap.org>

	* product.el: Fix file header. `checkdoc' fix.

	* apel-ver.el: Fix file header.

1999-12-22  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* APEL-ELS, EMU-ELS: product.el, apel-ver.el, time-stamp.el,