@@ -1,3 +1,14 @@
+2000-01-31  Mikio Nakajima  <minakaji@osaka.email.ne.jp>
+
+	* poe-18.el (defalias): Remove its definition as a function and
+	define it as an alias for `fset'.
+	(auto-fill-function): Declare with defvar-maybe.
+	(unread-command-event): Ditto.
+	(unread-command-events): Ditto.
+	(insert-and-inherit): Defile with defalias.
+	(insert-before-markers-and-inherit): Ditto.
+	(number-to-string): Ditto.
+
 2000-01-30  Mikio Nakajima  <minakaji@osaka.email.ne.jp>
 
 	* poe-18.el (window-minibuffer-p): New function.
